Adding more JVM parameters Adding some JMH results about latency to review in detail Adding a JFR file running the mehtod with Shenandoah GC